# -*- Makefile -*-

SUBDIRS          = extensions
DIST_SUBDIRS     = extensions

distclean-local:
	rm -rf Makefile.in aclocal.m4 configure Makefile.in aclocal.m4 autom4te.cache/ build-stamp configure debian/files debian/iptables-kzorp-addon.debhelper.log debian/iptables-kzorp-addon.substvars debian/iptables-kzorp-addon/ debian/iptables-zorp-addons.debhelper.log debian/iptables-zorp-addons.substvars debian/iptables-zorp-addons/ debian/tmp/ ./config.sub ./config.h.in config.guess.dh-orig config.sub.dh-orig config.guess config.sub

